2005-07-01 Serg Stoyan <stoyan255@ukr.net>

	* Resources/Preferences.gorm: Fixed name of preferences panel. 
	(Bug # 13590)
	
	* Update all .gorm files with latest GORM
	
2005-06-07 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCProjectEditor.m: 
	(orderFrontEditorForFile:): Always show editor subview 
	(Fixed bug#11779).

2005-02-12 Pascal Hoftsee <caelian@gmail.com>
  	   Committed by Gregory Jonh Casamento <greg_casamento@yahoo.com>
	
	* Library/PCButton.m: Corrected issue in 
	-[PCButton _updateTrackingRects:] which was causing a SIGBUS
	to occur on FreeBSD by simply moving the remove method call below
	the line which was referencing the rect.
	
2005-01-26 Serg Stoyan <stoyan255@ukr.net>

	* Release 0.4.2

	* PCAppController.m:
	(applicationWillTerminate:): Disable removal of BuilRoot.

2005-01-22 Serg Stoyan <stoyan255@ukr.net>

	* Release 0.4.1
	
	* Modules/ApplicationProject/PCAppProject+Inspector.m: 
	(addDocType:): Set all textfields to default values.
	(removeDocType:): Call fillFieldsForRow: after row removing.
	
2005-01-09 Gregory Jonh Casamento <greg_casamento@yahoo.com>

	* Library/PCProjectBuilder.m: 
	(build:): Exception handler added.
	
2005-01-09 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCButton.m: 
	(release): Added and implemented. Remove tooltips if object is
	about to be dealloced.

	* Library/PCProjectBuilder.m:
	(stopBuild:): Eception handler added.
	
2005-01-05 Serg Stoyan <stoyan255@ukr.net>

	* Library/GNUstep.postamble: Make "ln -s" ProjectCenter to the 
	../Library. It should make correct compiling on Windows.
	
	* Library/PCFileManager.m:
	(defaultManager:): Don't autorelease returned object.
	
2005-01-04 Serg Stoyan <stoyan255@ukr.net>

	* Library/PCFilesManager.[hm]:
	(createDirectoriesIfNeededAtPath:): Added and implemented.
	(copyFile:toFile:): ditto.
	(copyFile:intoDirectory:): ditto.

	* Use above methods where it's appropriate.

2005-01-03 Serg Stoyan <stoyan255@ukr.net>
